# glium-shadowmapping-test

./: .gitignore  Cargo.toml  README.md  dump.rs
resources/old/: cc.blend  cc.blend1  cc.mtl  cube.blend  cube.blend1  grid.blend  grid.blend1  heavy_icosphere.mtl  icosphere.blend  icosphere.blend1  icosphere.mtl  plane.blend  plane.mtl  sphere_tex.blend  sphere_tex.mtl  tea2.mtl  tex_cube.blend  tex_cube.blend1  tex_cube.mtl  untitled.blend  uvsphere.blend
src/: .main.rs.swp  aaa.rs  main.rs  old_main.rs
src/internal/: mod.rs  object.rs  program.rs  skybox.rs
src/shaders/: #ShadowMapping_SimpleVersion.vertexshader#  .#ShadowMapping_SimpleVersion.vertexshader  ShadowMapping_SimpleVersion.vertexshader  depth_sh.frag  depth_sh.vert  sh_shader.frag  sh_shader.vert  shadowShader.frag  shadowShader.vert  shadows.frag  shadows.vert  test2.frag
src/shaders/not_used/: DepthRTT.vertexshader  ShadowMapping_SimpleVersion.fragmentshader  ShadowMapping_SimpleVersion.vertexshader
src/shaders/old/: 2.frag  2.vert  3.frag  3.vert  basic.frag  basic.vert  idk.frag  idk.vert  lightstest.frag  lightstest.vert  prev.frag  prev.vert  realistic_light_test.frag  refl.frag  refl.vert  test1.frag  test1.vert
src/shaders/old/r/: refl.frag  refl.vert
src/support/: camera.rs  mod.rs
